--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,7 @@ dist.jar=${dist.dir}/lp-stock-base.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.bcprov-jdk16-145.jar=../lib/bcprov-jdk16-145.jar
+file.reference.bcprov-jdk18on-175.jar=../lib/bcprov-jdk18on-175.jar
 file.reference.commons-codec-1.11.jar=../lib/commons-codec-1.11.jar
 file.reference.commons-codec-1.9.jar=../lib/commons-codec-1.9.jar
 file.reference.commons-compress-1.9.jar=../lib/commons-compress-1.9.jar
@@ -50,8 +50,6 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.eclipselink.classpath}:\
-    ${libs.jpa20-persistence.classpath}:\
     ${reference.appdriver-agent.jar}:\
     ${reference.appdriver-agentfx.jar}:\
     ${reference.appdriver-agentfx-ui.jar}:\
@@ -60,8 +58,8 @@ javac.classpath=\
     ${reference.appdriver-iface.jar}:\
     ${file.reference.mysql-connector-java-5.1.49.jar}:\
     ${file.reference.commons-compress-1.9.jar}:\
-    ${file.reference.bcprov-jdk16-145.jar}:\
     ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.bcprov-jdk18on-175.jar}:\
     ${file.reference.commons-codec-1.9.jar}:\
     ${file.reference.commons-dbcp-1.2.2.jar}:\
     ${file.reference.commons-lang-2.1.jar}:\
